HMAC jar 파일 못읽는거 해결하는 build.gradle 수정

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,9 @@ dependencies {
 	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.15.0'
 	//스웨거
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.4.0'
+	//24.09.05 swj
+	//Coupang HMAC jar 파일 없음 이슈 해결용
+	implementation fileTree(dir: '/src/main/resources/static', include: ['*.jar'])
 }
 
 tasks.named('test') {
